fix Budget-C_Projects endpoint refs: https://github.com/metasfresh/metasfresh/issues/13283