@@ -34,7 +34,7 @@ import de.metas.project.ProjectCategory;
 import de.metas.project.ProjectId;
 import de.metas.project.ProjectTypeId;
 import de.metas.project.ProjectTypeRepository;
-import de.metas.project.shared.ProjectSharedService;
+import de.metas.project.sequence.ProjectValueSequenceProvider;
 import de.metas.quantity.Quantity;
 import de.metas.servicerepair.project.CreateServiceOrRepairProjectRequest;
 import org.adempiere.model.InterfaceWrapperHelper;
@@ -43,6 +43,7 @@ import org.adempiere.warehouse.WarehouseId;
 import org.compiere.model.I_C_Project;
 import org.compiere.model.I_C_ProjectType;
 import org.compiere.model.I_C_UOM;
+import org.elasticsearch.common.collect.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -65,15 +66,14 @@ public class ProjectServiceTest
 
 		final ProjectTypeRepository projectTypeRepository = new ProjectTypeRepository();
 
-		final ProjectSharedService projectSharedService = Mockito.spy(new ProjectSharedService(Mockito.mock(DocumentNoBuilderFactory.class), projectTypeRepository));
-		Mockito.doReturn(MOCKED_DocNo).when(projectSharedService).getValueForProjectType(any(ProjectTypeId.class));
-
-		this.projectService = new ProjectService(
+		this.projectService = Mockito.spy(new ProjectService(
 				projectTypeRepository,
 				new ProjectRepository(),
 				new ProjectLineRepository(),
-				Optional.of(ImmutableList.of()),
-				projectSharedService);
+				new DocumentNoBuilderFactory(Optional.of(List.of(new ProjectValueSequenceProvider(new ProjectTypeRepository())))),
+				Optional.of(ImmutableList.of())));
+
+		Mockito.doReturn(MOCKED_DocNo).when(projectService).getNextProjectValue(any(ProjectTypeId.class));
 	}
 
 	@Test
